trying to resolve scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
 }
 
 canvas {
-  touch-action: none;
+  touch-action: auto;
 }
 
 .screen-max-width {
